--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "mesto",
+  "name": "src",
   "version": "1.0.0",
-  "description": "mestoProject8",
+  "description": "A",
   "main": "index.js",
   "scripts": {
     "build": "webpack --mode production",
